Tue Sep  7 17:17:52 1993  Kevin Layer  (layer at sole)

	* fi-lemacs.el: more fiddling with the menus; fix bugs in active-p
	menu functions

	* fi-lep.el: only call lep::kill-list-all-completions-session when
	it exists

	* fi-modes.el: remove put of 'screen-name since we'll do it
	differently now

	* fi-subproc.el: fix calling of fi:display-buffer-function tcp
	connection code, too

	* fi-utils.el: fi::switch-to-buffer-new-screen doesn't care about
	which mode anymore.

Thu Sep  2 11:32:57 1993  Kevin Layer  (layer at sole)

	* fi-utils.el:
	* fi-lep.el:
	* fi-dmode.el:
	* fi-changes.el:
	* fi-basic-lep.el:
	  change all `package' local variables to `xpackage', because
	  `package' is often local (due to the file mode line) and
	  set-buffer undoes dynamic bindings of local variables when
	  switching from one buffer to another.  Foo!

	* fi-lemacs.el: just found out that the active-p menu predicates
	run with the locals from the buffer in the screen where the
	menubar resides.  If fi:package is something, like :pclos, that
	doesn't exist in the lisp world, then running the active-p preds
	that do fi:eval-in-lisp causes problems.  So, bind fi:package to
	nil.

Wed Sep  1 16:08:59 1993  Kevin Layer  (layer at sole)

	* fi-lemacs.el: lots of fixes, improvements

	* fi-lze.el: remove fi::error-if-request-in-progress, since it was
	turned off anyway; remove fi:reset-background-request since it was
>>>	never documented or needed; fi:lisp-evals-always-compile initial
	value is `t'; fix docstrings.

	* fi-modes.el: use fi:common-lisp-mode-hook instead of
	fi:lisp-mode-hook to hack mode-line-process; put readtable in
	mode-line-process; lemacs hacks

>>>	* fi-subproc.el: new fi:display-buffer-function for lemacs; new
	variable fi:new-screen-for-common-lisp-buffer.

	* fi-utils.el: fi::switch-to-buffer-new-screen and support

	* examples/emacs.el: fix for new fi-site-init

Tue Aug 31 20:00:00 1993  Kevin Layer  (layer@sole)

>>>	* fi-subproc.el: add fi:readtable defvar
