@@ -1,3 +1,7 @@
+Thu Sep  9 11:07:53 1993  Kevin Layer  (layer@sole)
+
+	* fi-lemacs.el: 19.8 active-p menu spec change
+
 Tue Sep  7 17:17:52 1993  Kevin Layer  (layer at sole)
 
 	* fi-lemacs.el: more fiddling with the menus; fix bugs in active-p
